# hakyll-template

./: .gitignore  Dockerfile  hakyll-template.cabal
.github/workflows/: deploy.yaml
app/: Image.hs  Main.hs  main.hs
src/: archive.html  index.html
src/css/: main.css
src/js/: main.js
src/posts/: 2023-11-15.md
src/templates/: base.html  common.html  post.html
