name:               hakyll-template
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Image
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , filepath
                  , diagrams
                  , diagrams-lib
                  , diagrams-svg
                  , diagrams-cairo
                  , SVGFonts
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
